# src/api/portfolio-swagger.json
@@ -153,6 +153,37 @@
         },
         "x-swagger-router-controller": "ThreasureApi"
       }
+    },
+    "/crypto/filter": {
+      "get": {
+        "tags": ["crypto-api"],
+        "summary": "Get filtered cryptocurrencies",
+        "description": "Get filtered cryptocurrencies.",
+        "operationId": "getCryptosById",
+        "parameters": [
+          {
+            "name": "cryptos",
+            "in": "query",
+            "required": true,
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "default": {
+            "description": "Unexpected error",
+            "schema": {
+              "$ref": "#/definitions/Error"
+            }
+          }
+        },
+        "x-swagger-router-controller": "CryptoApi"
+      }
     }
   },
   "definitions": {
